# low-latency-log-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
benchmarks/: CMakeLists.txt  bench_append.cpp
docs/adr/: 0001-phase-6-log-storage-engine.md
include/llle/: concepts.hpp  log_manager.hpp  log_segment.hpp  spsc_queue.hpp
tests/: CMakeLists.txt  test_concepts.cpp  test_log_manager.cpp  test_log_segment.cpp  test_spsc_queue.cpp
